--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,32 +1,16 @@
-cmake_minimum_required(VERSION 2.8)
-
-project(AAMED)
-
-
-set(CMAKE_BUILD_TYPE "Release")
-set(CMAKE_CXX_FLAGS "-std=c++11 -O3")
-
-
-
-
-include_directories("src")
+cmake_minimum_required(VERSION 3.17)
+project(AAMED VERSION 1.0)
+set(CMAKE_CXX_STANDARD 11)
 
 find_package(OpenCV REQUIRED)
 include_directories(${OpenCV_INCLUDE_DIRS})
+link_libraries(${OpenCV_LIBS})
 
-add_executable(${PROJECT_NAME} "src/main.cpp"
-                               "src/adaptApproximateContours.cpp"
-                               "src/adaptApproxPolyDP.cpp"
-                               "src/Contours.cpp"
-                               "src/EllipseNonMaximumSuppression.cpp"
-                               "src/FLED.cpp"
-                               "src/FLED_drawAndWriteFunctions.cpp"
-                               "src/FLED_PrivateFunctions.cpp"
-                               "src/Group.cpp"
-                               "src/LinkMatrix.cpp"
-                               "src/Node_FC.cpp"
-                               "src/Segmentation.cpp"
-                               "src/Validation.cpp"
-                               "src/FLED_Initialization.cpp")
+include_directories("src")
+file(GLOB_RECURSE PROJECT_SOURCES "src/*.cpp")
+list(REMOVE_ITEM PROJECT_SOURCES "src/main.cpp")
 
-target_link_libraries(${PROJECT_NAME} ${OpenCV_LIBS})
+
+add_executable(AAMEDemo ${PROJECT_SOURCES} "src/main.cpp")
+add_library(${PROJECT_NAME} ${PROJECT_SOURCES})
+
